Add multiple and optional fuzzy search capabilities

--- a/test/test/foo.html
+++ b/test/test/foo.html
@@ -13,7 +13,7 @@
             <h1>Foo</h1>
             <a href="#">Click here</a>
             <p>
-                Hello Mars from Earth.
+                Hello (Hallo) Mars from Earth.
             </p>
         </main>
         <footer>
